--- a/sass/layout/_clients-section.scss
+++ b/sass/layout/_clients-section.scss
@@ -1,7 +1,16 @@
 .clients {
-  padding-top: 94px;
-  padding-bottom: 94px;}
-
+  padding-top: 60px;
+  padding-bottom: 60px;
+    
+  @media screen and (min-width: 768px) {
+    max-width: 768px;
+  }
+  @media screen and (min-width: 1200px) {
+    max-width: 1200px;
+    padding-top: 94px;
+    padding-bottom: 94px;
+    }
+}
 .title {
   @include font(36px, 700, 1.1);
   color: $title-text-color;
@@ -11,28 +20,70 @@
 }
 .regular__list {
     display: flex;
-    justify-content: center;
+    flex-wrap: wrap;
+    margin-right: -30px;
+    margin-bottom: -30px;
+  @media screen and (min-width: 768px){
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: -30px;
+    margin-bottom: -30px;
   }
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: center;
+    margin-right: -30px;
+  }
+    
+}
 .regular__link {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 170px;
+  width: 210px;
   height: 92px;
+  flex-basis: calc((100% - 60px) / 2);
+  margin-right: 30px;
   fill: $border-clients;
   border: 1px solid $border-clients;
   border-radius: 4px;
   transition: transform $transition;
   transition-property: fill, border;
-    &:hover,
-    &:focus {
-      fill: $accent-color;
-      border: 1px solid $accent-color;
-    }
-  }
-  .regular__item:not(:last-child) {
+  margin-bottom: 30px;
+  @media screen and (min-width: 768px){
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 768px;
+    width: 226px;
+    height: 92px;
+    
+    flex-basis: calc((100% - 90px) / 3);
     margin-right: 30px;
+    margin-bottom: 30px;
   }
+  @media screen and (min-width: 1200px) {
+    max-width: 1200px;
+    width: 170px;
+    height: 92px;
+    margin-right: 30px;
+    flex-basis: calc((100% - 180px) / 6);
+  }
+ }
+.regular__link:hover,
+.regular__link:focus {
+  fill: $accent-color;
+  border: 1px solid $accent-color;
+}
+/*
+  .regular__item:not(:last-child) {
+    @media screen and (min-width: 768px){
+    margin-right: 30px;}
+    @media screen and (min-width: 1200px){
+    margin-right: 30px;}
+  }
+  */
   
   
   
