--- a/sass/layout/_feature-section.scss
+++ b/sass/layout/_feature-section.scss
@@ -1,62 +1,107 @@
 .feature {
-  width: 1200px;
-  padding-top: 94px;
-  margin-right: auto;
-  margin-left: auto;
+  //width: 1200px;
+  //padding-top: 94px;
+  
+  padding-top: 60px;
+  padding-bottom: 60px;
+  
+  @media screen and (min-width: 480px) {
+    max-width: 480px;
+  }
+  @media screen and (min-width: 768px) {
+    max-width: 768px;
+  }
+  @media screen and (min-width: 1200px) {
+    width: 1200px;
+    padding-top: 94px;
+    padding-bottom: 94px;
+    }
+  
 }
   
 .feature__list {
-  display: flex;
-  flex-wrap: nowrap;
+  margin-bottom: -30px;
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: -30px;
+  }
+  @media screen and (min-width: 1200px){
+    margin-right: -30px;
+  }
 }
-.feature__item > .feature__title {
-  margin-top: 30px;
-  margin-bottom: 10px;
-    & > .text.subject {
-      margin-top: 0px;
-      margin-bottom: 0px;
-    }
-}
+
   
 .feature__item {
-  display: inline-block;
-  width: 270px;
-    &:not(:last-child) {
-      margin-right: 30px;
-    }
-    &::before {
-      display: block;
-      content: "";
-      height: 120px;
-      background-size: 0.2, 0.3;
-      background-repeat: no-repeat;
-      background-position: center;
-      background-color: #f5f4fa;
-      border-radius: 4px;
-    }
+  width: 100%;
+  margin-bottom: 30px;
+  @media screen and (min-width: 768px) {
+    max-width: 768px;
+    flex-basis: calc((100% - 60px) / 2);
+    margin-right: 30px;
+  }
+  @media screen and (min-width: 1200px) {
+    max-width: 1200px;
+    display: inline-block;
+    flex-basis: calc((100% - 120px) / 4);
+    //width: 270px;
+    margin-right: 30px;
+  }
+} 
+.feature__item:not(:last-child) {
+  @media screen and (min-width: 1200px) {
+  margin-right: 30px;
+}
+}
+.feature__item::before {
+  display: block;
+  content: "";
+  height: 120px;
+  background-size: 0.2, 0.3;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-color: #f5f4fa;
+  border-radius: 4px;
 }
   
+
 .feature__icon--antenna::before {
   background-image: url(../images/antenna.svg);
+  margin-bottom: 30px;
 }
 .feature__icon--clock::before {
   background-image: url(../images/clock.svg);
+  margin-bottom: 30px;
 }
 .feature__icon--diagram::before {
   background-image: url(../images/diagram.svg);
+  margin-bottom: 30px;
 }
 .feature__icon--astronaut::before {
   background-image: url(../images/astronaut.svg);
+  margin-bottom: 30px;
 }
   
 .feature__title {
   @include font(14px, 700, 1.1);
   text-transform: uppercase;
   color: $title-text-color;
+  text-align: center;
+  margin-top: 0;
+  margin-bottom: 10px;
+  @media screen and (min-width: 768px){ 
+    text-align: left;
+  }
+  @media screen and (min-width: 1200px) {
+    text-align: left;
+  }
 }
   
 .feature__text {
   font-size: 14px;
   line-height: 1.7;
   color: $primery-text-color;
+  
+  margin-top: 0;
+  margin-bottom: 0;
 }
