--- a/sass/layout/_hero-section.scss
+++ b/sass/layout/_hero-section.scss
@@ -9,6 +9,12 @@
     rgba(47, 48, 58, 0.4)
     ),
     url("../images/heroimg.jpg");
+  @media (min-device-pixel-ratio: 2) and (min-width: 480px),
+  (min-resolution: 192dpi) and (min-width: 480px),
+  (min-resolution: 2dppx) and (min-width: 480px) {
+    width: 480px;
+    background-image: url('.../images/heroimg2x.svg');
+  }
   }
 .hero {
   background-color: $same-section-color;
@@ -18,13 +24,21 @@
 }
   
 .hero__title {
-  @include font(44px, 900, 1.3);
+  @include font(26px, 900, 1.6);
   color: #fff;
   font-style: normal;
   text-transform: uppercase;
   text-align: center;
   margin-top: 0px;
   margin-bottom: 43px;
+  @media screen and (min-width: 1200px) {
+  width: 1200px;
+  @include font(44px, 900, 1.3);
+  margin-left: 60px;
+  margin-right: 60px;
+  margin-top: 180px;
+  margin-bottom: 30px;
+  }
 }
   
 .hero__button {
