--- a/sass/layout/_team-section.scss
+++ b/sass/layout/_team-section.scss
@@ -1,7 +1,17 @@
 .team {
   background: #f5f4fa;
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+    
+  @media screen and (min-width: 768px) {
+    max-width: 768px;
+  }
+  @media screen and (min-width: 1200px) {
+    max-width: 1200px;
+    padding-top: 94px;
+    padding-bottom: 94px;
+    }
+  
   }
 .title {
   font-weight: bold;
@@ -11,21 +21,67 @@
   text-align: center;
   margin-bottom: 50px;
   margin-top: 0px;
+  @media screen and (min-width: 768px){
+    font-size: 28px;
+  }
 }
 .team__list {
-  display: flex;
+  margin-bottom: -30px;
+  @media screen and (min-width: 768px){
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: -30px;
+  }
+  @media screen and (min-width: 1200px) {
+    flex-wrap: nowrap;
+    margin-right: -30px;
+    
+  }
 }
 .team__item {
-  width: 270px;
+  width: 100%;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
       0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
-  &:not(:last-child) {
+  margin-bottom: 30px;
+  @media screen and (min-width: 768px){
+    max-width: 768px;
+    flex-basis: calc((100% - 60px) / 2);
     margin-right: 30px;
   }
+  @media screen and (min-width: 1200px) {
+    max-width: 1200px;
+    margin-bottom: 0;
+    margin-left: 0;
+    margin-right: 30px;
+    flex-basis: calc((100% - 120px) / 4);
+    
+  }
 }
+.team__item:not(:last-child) {
+  @media screen and (min-width: 1200px){
+  margin-right: 30px;
+}
+}
+.team__img{
+  width: 450px;
+  height: 460px;
+  
+  
+  @media screen and (min-width: 768px){
+    max-width: 354px;
+    height: 374px;
+  }
+  @media screen and (min-width: 1200px) {
+    width: 270px;
+    height: 260px;
+    background-size: cover;
+  }
+}
+
 .team__box {
-  width: 270px;
+  /*width: 270px;*/ 
+  
   border-right: $border;
   border-bottom: $border;
   border-left: $border;
@@ -43,6 +99,13 @@
     margin-top: 0px;
     margin-bottom: 16px;
   }
+  @media screen and (min-width: 768px) {
+    width: 354px;
+   }
+   @media screen and (min-width: 1200px) {
+    width: 270px;
+    margin-right: 0;
+   }
 }
 .team__name {
   font-weight: 500;
