--- a/sass/layout/_work-section.scss
+++ b/sass/layout/_work-section.scss
@@ -1,6 +1,20 @@
 .work {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  display: none;
+  @media screen and (min-width: 480px) {
+    max-width: 480px;
+    
+  }
+  @media screen and (min-width: 768px) {
+    width: 768px;
+
+   }
+   @media screen and (min-width: 1200px) {
+    width: 1200px;
+    display: grid;
+    padding-top: 94px;
+    padding-bottom: 94px;
+   }
+  
 }
 .work__subtitle {
   margin-top: 0px;
